# praeses-blackjack

./: Cargo.toml  LICENSE  README.md  project-requirements.md
.github/workflows/: release.yml  rust-build-test.yml
src/: blackjack.rs  cards.rs  lib.rs  main.rs
src/blackjack/: actors.rs  player.rs
src/blackjack/actors/: dealers.rs  players.rs
src/blackjack/actors/players/: auto_player.rs  human_player.rs
